# ruperl

./: .gitignore  Cargo.toml  README.md  build.rs  hello.pm
examples/call_argv/: hello.pm  main.rs  printlist.pl
perl-boilerplate/: wrapper.h
src/: lib.rs  main.rs
