[package]
name = "ruperl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "ruperl"
path = "src/main.rs"

[build-dependencies]
bindgen = "0.69.4"
cc = "1.0.95"

[dependencies]
cc = "1.0.95"
clap = "4.5.4"

[dev-dependencies]
cc = "1.0.95"
