[package]
name = "ruperl"
version = "0.0.1-alpha.1"
edition = "2021"
license = "Apache-2.0"
description = "A library for embedding perl in your rust project"
homepage = "https://foursixnine.io"
repository = "https://github.com/foursixnine/ruperl"
keywords = ["perl", "embedded", "embed", "cpan"]

[badges]
maintenance = { status = "experimental,actively-developed" }

[lib]
name = "ruperl"
path = "src/lib.rs"

[build-dependencies]
bindgen = "0.69.4"
cc = "1.0.95"

[dependencies]
clap = "4.5.4"
